--- a/app/views/journal_entries/index.html.erb
+++ b/app/views/journal_entries/index.html.erb
@@ -43,12 +43,11 @@
                   <% amount = entry.journal_entry_lines.where(side: "debit").sum(:amount) %>
                   <%= number_to_currency(amount, unit: "¥", precision: 0, delimiter: ",") %>
                 </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium space-x-2">
-                  <%= link_to "詳細", "/", class: "text-blue-600 hover:text-blue-900" %>
+                <td class="flex px-6 py-4 text-sm font-medium space-x-2">
                   <%= link_to "編集", "/", class: "text-green-600 hover:text-green-900" %>
-                  <%= link_to "削除", "/", method: :delete,
-                      data: { confirm: "本当に削除しますか？" },
-                      class: "text-red-600 hover:text-red-900" %>
+                  <%= button_to "削除", journal_entry_path(entry), method: :delete,
+                                data: { turbo_confirm: "本当に削除しますか？" },
+                                class: "text-red-600 hover:text-red-900 bg-transparent border-0" %>
                 </td>
               </tr>
             <% end %>
@@ -56,8 +55,6 @@
             <tr>
               <td colspan="6" class="px-6 py-8 text-center text-gray-500">
                 仕訳が登録されていません。
-                <%= link_to "新規作成", "/", class: "text-blue-600 hover:text-blue-900 font-medium" %>
-                してください。
               </td>
             </tr>
           <% end %>
