--- a/app/views/journal_entries/_editor.html.erb
+++ b/app/views/journal_entries/_editor.html.erb
@@ -65,9 +65,11 @@
                       <!-- 金額 -->
                       <div class="col-span-4 border-r p-0">
                         <%= line_form.number_field :amount,
+                            value: line_form.object.formatted_amount_for_input,
                             placeholder: "0",
                             min: 1,
                             max: 999999999999,
+                            step: "0.01",
                             class: "w-full h-full px-2 py-2 border-0 font-mono text-sm text-right focus:outline-none focus:bg-yellow-100",
                             data: { action: "input->journal-entry#updateTotals" } %>
                       </div>
@@ -138,8 +140,10 @@
                       <div class="col-span-4 border-r p-0">
                         <%= line_form.number_field :amount,
                             placeholder: "0",
+                            value: line_form.object.formatted_amount_for_input,
                             min: 1,
                             max: 999999999999,
+                            step: "0.01",
                             class: "w-full h-full px-2 py-2 border-0 font-mono text-sm text-right focus:outline-none focus:bg-yellow-100",
                             data: { action: "input->journal-entry#updateTotals" } %>
                       </div>
