--- a/app/views/journal_entries/_editor.html.erb
+++ b/app/views/journal_entries/_editor.html.erb
@@ -44,7 +44,7 @@
             </div>
 
             <!-- 借方列ヘッダー -->
-            <div class="grid grid-cols-12 border-[0.5] bg-gray-100">
+            <div class="grid grid-cols-12">
               <div class="col-span-6 border-[0.5] border-black py-2 text-center font-mono text-sm">勘定科目</div>
               <div class="col-span-4 border-[0.5] border-black py-2 text-center font-mono text-sm">金額</div>
               <div class="col-span-2 border-[0.5] border-black py-2 text-center font-mono text-sm">削除</div>
@@ -86,7 +86,7 @@
             </div>
 
             <!-- 貸方列ヘッダー -->
-            <div class="grid grid-cols-12 border-y-[0.5] bg-gray-100">
+            <div class="grid grid-cols-12">
               <div class="col-span-6 border-[0.5] border-black py-2 text-center font-mono text-sm">勘定科目</div>
               <div class="col-span-4 border-[0.5] border-black py-2 text-center font-mono text-sm">金額</div>
               <div class="col-span-2 border-[0.5] border-black py-2 text-center font-mono text-sm">削除</div>
