--- a/app/views/journal_entries/_editor.html.erb
+++ b/app/views/journal_entries/_editor.html.erb
@@ -45,9 +45,9 @@
 
             <!-- 借方列ヘッダー -->
             <div class="grid grid-cols-12">
-              <div class="col-span-6 border-[0.5] border-black py-2 text-center font-mono text-sm">勘定科目</div>
-              <div class="col-span-4 border-[0.5] border-black py-2 text-center font-mono text-sm">金額</div>
-              <div class="col-span-2 border-[0.5] border-black py-2 text-center font-mono text-sm">削除</div>
+              <div class="col-span-6 border-[0.5] border-black bg-gray-100 py-2 text-center font-mono text-sm">勘定科目</div>
+              <div class="col-span-4 border-[0.5] border-black bg-gray-100 py-2 text-center font-mono text-sm">金額</div>
+              <div class="col-span-2 border-[0.5] border-black bg-gray-100 py-2 text-center font-mono text-sm">削除</div>
             </div>
 
             <!-- 借方明細行 -->
@@ -87,9 +87,9 @@
 
             <!-- 貸方列ヘッダー -->
             <div class="grid grid-cols-12">
-              <div class="col-span-6 border-[0.5] border-black py-2 text-center font-mono text-sm">勘定科目</div>
-              <div class="col-span-4 border-[0.5] border-black py-2 text-center font-mono text-sm">金額</div>
-              <div class="col-span-2 border-[0.5] border-black py-2 text-center font-mono text-sm">削除</div>
+              <div class="col-span-6 border-[0.5] border-black bg-gray-100 py-2 text-center font-mono text-sm">勘定科目</div>
+              <div class="col-span-4 border-[0.5] border-black bg-gray-100 py-2 text-center font-mono text-sm">金額</div>
+              <div class="col-span-2 border-[0.5] border-black bg-gray-100 py-2 text-center font-mono text-sm">削除</div>
             </div>
 
             <!-- 貸方明細行 -->
