--- a/app/views/journal_entries/_line.html.erb
+++ b/app/views/journal_entries/_line.html.erb
@@ -24,7 +24,6 @@
         min: 1,
         max: 999999999999,
         step: "0.01",
-        class: "w-full h-full px-2 py-2 border-0 font-mono text-sm text-right focus:outline-none focus:bg-yellow-100",
-        data: { action: "input->journal-entry#updateTotals" } %>
+        class: "w-full h-full px-2 py-2 border-0 font-mono text-sm text-right focus:outline-none focus:bg-yellow-100" %>
   </div>
 </div>
