--- a/app/views/journal_entries/_line.html.erb
+++ b/app/views/journal_entries/_line.html.erb
@@ -6,7 +6,7 @@
 
   <!-- 勘定科目 -->
   <div class="col-span-6 border-[0.5] border-black p-0">
-    <%= text_field_tag "__readonly__account_name",
+    <%= text_field_tag "#{field_name}__readonly__account_name",
         (accounts.find { |a| a.id == selected_account_id }&.name if selected_account_id),
         { placeholder: "勘定科目を入力または選択",
           list: "accounts_datalist",
