損益計算書画面をモックアップ

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <main class="container mx-auto mt-24 mb-12 px-5 flex">
       <%= yield %>
     </main>
   </body>
