--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,10 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <main class="container mx-auto mt-24 mb-12 px-5 flex">
+  <body class="bg-gray-50">
+    <%= render 'shared/header' %>
+
+    <main class="container mx-auto my-12 flex">
       <%= yield %>
     </main>
   </body>
