ProfitAndLoss モデルにデーターベースから情報を収集するロジックを実装する

--- a/app/views/profit_and_loss_statements/index.html.erb
+++ b/app/views/profit_and_loss_statements/index.html.erb
@@ -16,7 +16,7 @@
             </tr>
           </thead>
           <tbody class="bg-white">
-            <% @revenue_accounts.each do |account| %>
+            <% @revenu_lines.each do |account| %>
               <tr>
                 <td class="px-4 py-3 border border-black font-mono text-sm"><%= account.name %></td>
                 <td class="px-4 py-3 border border-black font-mono text-sm text-right">
@@ -45,7 +45,7 @@
             </tr>
           </thead>
           <tbody class="bg-white">
-            <% @expense_accounts.each do |account| %>
+            <% @expense_lines.each do |account| %>
               <tr>
                 <td class="px-4 py-3 border border-black font-mono text-sm"><%= account.name %></td>
                 <td class="px-4 py-3 border border-black font-mono text-sm text-right">
