--- a/app/views/profit_and_loss_statements/index.html.erb
+++ b/app/views/profit_and_loss_statements/index.html.erb
@@ -4,7 +4,8 @@
       <h1 class="text-3xl font-mono tracking-wide">損益計算書</h1>
     </div>
 
-    <div class="p-8 grid grid-cols-1 sm:grid-cols-2 gap-8">
+    <p class="font-mono font-bold text-center m-4"><%= @from.strftime('%Y年%m月%d日') %> ~ <%= @to.strftime('%Y年%m月%d日') %></p>
+    <div class="px-4 grid grid-cols-1 sm:grid-cols-2 gap-8">
       <!-- 費用の部 -->
       <div>
         <h2 class="text-2xl font-mono tracking-wide mb-4 border-b-2 border-black pb-2 text-center">費用の部</h2>
