--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
               class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-2 px-4 border-2 border-black font-mono tracking-widest transition-all" %>
           <%= link_to "仕訳", journal_entries_path,
               class: "font-mono tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all" %>
-          <%= link_to "損益計算書", profit_and_loss_statement_path,
+          <%= link_to "損益計算書", profit_and_loss_path,
               class: "font-mono tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all" %>
         </nav>
       </div>
