--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,6 +13,8 @@
               class: "font-mono tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all" %>
           <%= link_to "損益計算書", profit_and_loss_path,
               class: "font-mono tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all" %>
+          <%= link_to "プロフィール", user_path,
+              class: "font-mono tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all" %>
           <%= form_with url: session_path, method: :delete, local: true do |form| %>
             <%= form.button "ログアウト", formmethod: :delete,
                 class: "font-mono tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all cursor-pointer" %>
