--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,16 +13,20 @@
       <div data-controller="passkeys">
         <h2 class="text-2xl font-mono tracking-wide mb-4 border-b-2 border-black pb-2">パスキー</h2>
         <div class="flex flex-col gap-4">
-          <ul class="space-y-2">
-            <% @user.user_passkeys.each do |passkey| %>
-              <li class="font-mono p-4 border border-black">
-                <div class="flex justify-between items-center">
-                  <span><%= passkey.external_id %></span>
-                  <span><%= button_to "削除", passkey_path(passkey.id), method: :delete, class: "text-red-500 hover:underline" %></span>
-                </div>
-              </li>
-            <% end %>
-          </ul>
+          <% if @user.user_passkeys.empty? %>
+            <p class="font-mono text-gray-600">未登録</p>
+          <% else %>
+            <ul class="space-y-2">
+              <% @user.user_passkeys.each do |passkey| %>
+                <li class="font-mono p-4 border border-black">
+                  <div class="flex justify-between items-center">
+                    <span><%= passkey.external_id %></span>
+                    <span><%= button_to "削除", passkey_path(passkey.id), method: :delete, class: "text-red-500 hover:underline" %></span>
+                  </div>
+                </li>
+              <% end %>
+            </ul>
+          <% end %>
           <div class="mt-4">
             <button data-action="passkeys#register" class="bg-black text-white font-mono py-3 px-6 border-2 border-black hover:bg-gray-800">
               新しいパスキーを登録
