--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,22 @@
   width: 100%;
   height: 100%;
 }
+
+/* メッセージが上から徐々に現れるアニメーション */
+.toast-animation {
+  transition: opacity 0.4s, translate 0.4s, display 0.4s allow-discrete;
+
+  opacity: 0;
+  translate: -50% -50px;
+  display: none;
+}
+
+.toast-animation:popover-open {
+  opacity: 1;
+  translate: -50% 0;
+  display: block;
+  @starting-style {
+    opacity: 0;
+    translate: -50% -50px;
+  }
+}
