--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,5 +30,7 @@
     <main class="container mx-auto my-12 flex">
       <%= yield %>
     </main>
+
+    <%= render 'shared/templates' %>
   </body>
 </html>
