--- a/app/views/company_selections/new.html.erb
+++ b/app/views/company_selections/new.html.erb
@@ -1,1 +1,26 @@
-事業所選択画面です
+<div class="font-mono max-w-4xl min-w-2xs sm:min-w-2xl mx-auto py-12">
+  <div class="bg-white border-4 border-black shadow-2xl">
+    <div class="bg-gray-100 px-8 py-6 border-b-4 border-black">
+      <h1 class="text-3xl font-mono tracking-wide">事業所選択</h1>
+    </div>
+
+    <div class="flex flex-col items-center space-y-4 p-8">
+      <% @companies.each do |company| %>
+        <% if @current_company == company %>
+          <div class="min-w-xs sm:min-w-md">
+            <p class="w-full h-full text-center py-3 px-6 border-2 border-black">
+              <%= company.name %> (ログイン中)
+            </p>
+          </div>
+        <% else %>
+          <div class="min-w-xs sm:min-w-md">
+            <%= form_with url: company_selection_path do |form| %>
+              <%= form.hidden_field :company_id, value: company.id %>
+              <%= form.submit company.name, class: "w-full h-full bg-black text-white py-3 px-6 border-2 border-black hover:bg-gray-800 cursor-pointer" %>
+            <% end %>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+</div>
