事業所未選択の場合にグローバルヘッダーを表示しない

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   </head>
 
   <body class="bg-gray-50">
-    <% if authenticated? %>
+    <% if authenticated? && company_selected? %>
       <%= render 'shared/header' %>
     <% end %>
 
