--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="bg-white border-b-4 border-black shadow-2xl">
+<header class="font-mono bg-white border-b-4 border-black shadow-2xl">
   <div class="container mx-auto p-4">
     <div class="flex justify-between items-center">
       <div class="flex items-center space-x-8">
@@ -7,18 +7,38 @@
         <% end %>
 
         <nav class="flex space-x-1">
-          <%= link_to "新規仕訳", new_journal_entry_path,
-              class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-2 px-4 border-2 border-black font-mono tracking-widest transition-all" %>
           <%= link_to "仕訳", journal_entries_path,
-              class: "font-mono tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all" %>
-          <%= link_to "損益計算書", profit_and_loss_path,
-              class: "font-mono tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all" %>
-          <%= link_to "プロフィール", user_path,
-              class: "font-mono tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all" %>
-          <%= form_with url: session_path, method: :delete, local: true do |form| %>
-            <%= form.button "ログアウト", formmethod: :delete,
-                class: "font-mono tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all cursor-pointer" %>
-          <% end %>
+              class: "tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all" %>
+          <button popovertarget="financial-statements-menu"
+            class="tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all cursor-pointer">
+            財務諸表
+          </button>
+          <div id="financial-statements-menu" popover>
+            <div class="flex flex-col py-2 border-2 border-black">
+              <%= link_to "損益計算書", profit_and_loss_path,
+                class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
+              <%= link_to "貸借対照表", root_url,
+                class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
+            </div>
+          </div>
+          <button popovertarget="user-profile-menu"
+            class="tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all cursor-pointer">
+            プロフィール
+          </button>
+          <div id="user-profile-menu" popover>
+            <div class="flex flex-col py-2 border-2 border-black">
+              <div class="px-3 py-2 text-center text-black"><%= Current.user.email_address %></div>
+              <div class="px-3 py-2 text-center text-black"><%= Current.company.name %></div>
+              <%= link_to "事業所切り替え", new_company_selection_path,
+                class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
+              <%= link_to "アカウント設定", user_path,
+                class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
+              <%= form_with url: session_path, method: :delete, local: true do |form| %>
+                <%= form.button "ログアウト", formmethod: :delete,
+                    class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all cursor-pointer" %>
+              <% end %>
+            </div>
+          </div>
         </nav>
       </div>
     </div>
