--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,7 +17,7 @@
             <div class="flex flex-col py-2 border-2 border-black">
               <%= link_to "損益計算書", profit_and_loss_path,
                 class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
-              <%= link_to "貸借対照表", root_url,
+              <%= link_to "貸借対照表", balance_sheet_path,
                 class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
             </div>
           </div>
