--- a/app/views/journal_entries/index.html.erb
+++ b/app/views/journal_entries/index.html.erb
@@ -63,5 +63,9 @@
         </tbody>
       </table>
     </div>
+
+    <div class="flex justify-center py-2">
+     <%= paginate @journal_entries %>
+    </div>
   </div>
 </div>
