事業所作成画面を実装する

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -21,6 +21,7 @@
           </div>
         <% end %>
       <% end %>
+      <%= link_to "新規事業所作成", new_company_path, class: "underline hover:text-blue-600" %>
     </div>
   </div>
 </div>
