--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -29,7 +29,7 @@
             <div class="flex flex-col py-2 border-2 border-black">
               <div class="px-3 py-2 text-center text-black"><%= Current.user.email_address %></div>
               <div class="px-3 py-2 text-center text-black"><%= Current.company.name %></div>
-              <%= link_to "事業所切り替え", new_company_selection_path,
+              <%= link_to "事業所切り替え", companies_path,
                 class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
               <%= link_to "アカウント設定", user_path,
                 class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
