[仕訳エディター] Enter キーでのフォーム送信をブロックし Cmd + Enter でフォーム送信されるようにする

--- a/app/views/journal_entries/_editor.html.erb
+++ b/app/views/journal_entries/_editor.html.erb
@@ -5,7 +5,7 @@
   <% end %>
 </datalist>
 
-<div class="max-w-6xl mx-auto min-h-screen">
+<div class="max-w-6xl mx-auto min-h-screen" data-controller="journal-entry-editor">
   <div class="bg-white border-4 border-black shadow-2xl">
     <div class="flex justify-between items-center bg-gray-100 px-8 py-6 border-b-4 border-black">
       <h1 class="text-3xl font-mono tracking-wide">仕訳入力</h1>
