会計年度の開始付きの名前を accounting_period_start_month に改める
会計期間は典型的には12ヶ月だが、決算月の変更に伴って伸びたり短くなったりする
そのため、fiscal year よりも accounting period のほうがより実態に即した命名であると判断
また _num という接尾辞は冗長な印象を受けたので削る

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -33,10 +33,10 @@
         </tr>
         <tr>
           <th scope="row" class="border">
-            <%= form.label :fy_start_month_num, "会計年度の開始月", class: "block w-full h-full border-black bg-gray-100 py-2 text-center" %>
+            <%= form.label :accounting_period_start_month, "会計年度の開始月", class: "block w-full h-full border-black bg-gray-100 py-2 text-center" %>
           </th>
           <td class="border">
-            <%= form.select :fy_start_month_num, (1..12).map { |v| [ "#{v}月", v ]}, {},
+            <%= form.select :accounting_period_start_month, (1..12).map { |v| [ "#{v}月", v ]}, {},
                 { class: "block w-full h-full px-2 py-2 focus:outline-none focus:bg-yellow-100" } %>
           </td>
         </tr>
