総勘定元帳を表示する画面の雛形を追加

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,6 +9,8 @@
         <nav class="flex space-x-1">
           <%= link_to "仕訳", journal_entries_path,
               class: "tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all" %>
+          <%= link_to "勘定", general_ledger_path,
+              class: "tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all" %>
           <button popovertarget="financial-statements-menu"
             class="tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all cursor-pointer">
             財務諸表
