不要な border-black を削除する

--- a/app/views/journal_entries/_editor.html.erb
+++ b/app/views/journal_entries/_editor.html.erb
@@ -40,7 +40,7 @@
       <table class="border-collapse border-2 mb-4">
         <tr>
           <th scope="row" colspan="2" class="border">
-            <%= form.label :entry_date, "仕訳日", class: "block w-full h-full border-black bg-gray-100 py-2 text-center text-sm" %>
+            <%= form.label :entry_date, "仕訳日", class: "block w-full h-full bg-gray-100 py-2 text-center text-sm" %>
           </th>
           <td colspan="2" class="border">
             <%= form.date_field :entry_date, autofocus: true, class: "block w-full h-full px-2 py-2 text-sm focus:outline-none focus:bg-yellow-100" %>
@@ -48,7 +48,7 @@
         </tr>
         <tr>
           <th scope="row" colspan="2" class="border">
-            <%= form.label :summary, "摘要", class: "block w-full h-full border-black bg-gray-100 py-2 text-center text-sm" %>
+            <%= form.label :summary, "摘要", class: "block w-full h-full bg-gray-100 py-2 text-center text-sm" %>
           </th>
           <td colspan="2" class="border">
             <%= form.text_field :summary, placeholder: "取引の内容を入力してください", class: "block w-full h-full px-2 py-2 text-sm focus:outline-none focus:bg-yellow-100" %>
